#28: Optimized AoC2015 days 3